--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@dataconnect/generated": "file:src/dataconnect-generated",
     "encoding": "^0.1.13",
     "firebase": "^12.6.0",
     "next": "15.5.2",
